# CallSense

./: .gitignore  README.md  browser_use.py  mindmap_agenthacks.excalidraw  requirements.txt  voice_use.py
ai_support_agent/: config.py  debug_test.py  main.py  pyproject.toml  requirement.txt  test_llm_service.py
ai_support_agent/components/: __init__.py  ai_agent.py  llm_service.py  orchestrator.py  rag_service.py  speech_to_text.py  state_manager.py  transcript_storage.py
ai_support_agent/data/: knowledge_base.json  policies.txt  system_prompt.txt  system_prompt_old.txt
ai_support_agent/frontend/: __init__.py  gradio_app.py
ai_support_agent/utils/: __init__.py  models.py
stt/: assemblyv1.py  assemblyv2.py  pyproject.toml  transcribe.py
wolmert/: wolmert.py
