[project]
name            = "hackathon-repo"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.11"
dependencies    = [
    "aiofiles==23.2.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "assemblyai==0.40.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "fastapi==0.115.12",
    "ffmpy==0.5.0",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "fsspec==2025.5.1",
    "gradio==4.44.1",
    "gradio-client==1.3.0",
    "h11==0.16.0",
    "hf-xet==1.1.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.0",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "numpy==2.2.6",
    "openai==1.82.0",
    "orjson==3.10.18",
    "packaging==25.0",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pyaudio==0.2.14",
    "pydantic==2.6.1",
    "pydantic-core==2.16.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "ruff==0.11.11",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "tomlkit==0.12.0",
    "tqdm==4.67.1",
    "typer==0.15.4",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "websockets==12.0",
]
